--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <div id="logo1">
        <figure>
       <a href="">
-      <img src="../img/aibo-23150329189001.gif" alt="logo" id="cubomagico"> 
+      <img src="img/aibo-23150329189001.gif" alt="logo" id="cubomagico"> 
       </a></figure>
       
      </div>
